# oggm-ci-workflow

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/: main.py
