[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "oggm-ci-workflow"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "gampnico", email = "" }
]
description = "OGGM Workflow for CI testing"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
build = [
    "build>=1.4.0",
    "twine>=6.2.0",
]

[project.urls]
"Homepage" = "https://github.com/gampnico/ci-test-workflow-oggm"
"Bug Tracker" = "https://github.com/gampnico/ci-test-workflow-oggm/issues"
"Documentation" = "https://docs.oggm.org/"

[tool.hatch.build.targets.sdist]
packages = ["src"]
exclude = [
    "docs",
    ".coverage.*"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.hatch.envs.default]
env-vars-file = ".env"

[dependency-groups]
build = [
    "build>=1.4.0",
    "twine>=6.2.0",
]

[tool.uv.build-backend]
module-root = ""
module-name = "oggmciworkflow"
